<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.google.cloud</groupId>
        <artifactId>sdk-platform-java-config</artifactId>
        <version>3.45.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.google.cloud</groupId>
    <artifactId>google-cloud-spanner-cassandra-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version><!-- {x-version-update:google-cloud-spanner-cassandra:current} -->

    <name>Google Cloud Spanner Cassandra Parent</name>
    <url>https://github.com/googleapis/java-spanner-cassandra</url>
    <description>Cassandra adapter for Google Cloud Spanner.</description>
    <developers>
        <developer>
        <id>chingor</id>
        <name>Jeff Ching</name>
        <email>chingor@google.com</email>
        <organization>Google</organization>
        <roles>
            <role>Developer</role>
        </roles>
        </developer>
    </developers>
    <organization>
        <name>Google LLC</name>
    </organization>
    <scm>
        <connection>scm:git:git@github.com:googleapis/java-spanner-cassandra.git</connection>
        <developerConnection>scm:git:git@github.com:googleapis/java-spanner-cassandra.git</developerConnection>
        <url>https://github.com/googleapis/java-spanner-cassandra</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/googleapis/java-spanner-cassandra/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <licenses>
        <license>
        <name>Apache-2.0</name>
        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>    

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>google-cloud-shared-dependencies</artifactId>
                <version>${google-cloud-shared-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>        
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>google-cloud-spanneradapter</artifactId>
                <version>0.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.cassandra</groupId>
                <artifactId>java-driver-core</artifactId>
                <version>4.19.0</version>
            </dependency>
           <dependency>
                <groupId>com.datastax.oss</groupId>
                <artifactId>native-protocol</artifactId>
                <version>1.5.2</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version> </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>1.7.36</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>4.11.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>1.17.5</version>
                <scope>test</scope>
            </dependency>            
            <dependency>
                <groupId>com.google.truth</groupId>
                <artifactId>truth</artifactId>
                <version>1.4.4</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>google-cloud-spanner-cassandra</module>
        <module>spanner-cassandra-launcher</module>
        <module>samples</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

 <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.8.0</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>index</report>
              <report>dependency-info</report>
              <report>team</report>
              <report>ci-management</report>
              <report>issue-management</report>
              <report>licenses</report>
              <report>scm</report>
              <report>dependency-management</report>
              <report>distribution-management</report>
              <report>summary</report>
              <report>modules</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
          <artifactId>${site.installationModule}</artifactId>
          <packaging>jar</packaging>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <reportSets>
          <reportSet>
            <id>html</id>
            <reports>
              <report>aggregate</report>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <doclint>none</doclint>
          <show>protected</show>
          <nohelp>true</nohelp>
          <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
          <groups>
            <group>
              <title>Test helpers packages</title>
              <packages>com.google.cloud.testing</packages>
            </group>
            <group>
              <title>SPI packages</title>
              <packages>com.google.cloud.spi*</packages>
            </group>
          </groups>

          <links>
            <link>https://grpc.io/grpc-java/javadoc/</link>
            <link>https://developers.google.com/protocol-buffers/docs/reference/java/</link>
            <link>https://googleapis.dev/java/google-auth-library/latest/</link>
            <link>https://googleapis.dev/java/gax/latest/</link>
            <link>https://googleapis.github.io/api-common-java/</link>
          </links>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>